(feat) pass api reference directly