@@ -28,6 +28,8 @@ repositories {
 
 dependencies {
     api(project(":api"))
+    testImplementation(project(":jna"))
+    testImplementation(project(":ffm"))
     testImplementation("org.junit.jupiter:junit-jupiter:5.10.2")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
@@ -58,7 +60,24 @@ java {
 
 tasks.test {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
+    systemProperty(
+        "jna.library.path", listOf(
+            System.getProperty("pcre2.library.path"),
+            System.getProperty("jna.library.path")
+        ).joinToString(":")
+    )
+    systemProperty(
+        "java.library.path", listOf(
+            System.getProperty("pcre2.library.path"),
+            System.getProperty("java.library.path")
+        ).joinToString(":")
+    )
     finalizedBy(tasks.jacocoTestReport)
+}
+
+tasks.named<JavaCompile>("compileTestJava") {
+    options.compilerArgs.add("--enable-preview")
 }
 
 tasks.jacocoTestReport {
